force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Unit_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Formula__c</fullName>
    <formula>IF(OR(ISPICKVAL(VS_Region__c, &apos;VSI&apos;),ISPICKVAL(VS_Region__c, &apos;VSE&apos;)), Selling_price_Unit_Price__c,null)
/*
			CASE(distributor__r.Name, 
					&apos;ALSO Deutschland GmbH&apos;, 	repValue_Unit_Price__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, Einzel_Netto_Preis_Unit_Price__c, 
					&apos;Computation Systemhaus GmbH&apos;, Price_Unit_Price__c,
					&apos;Delo Computer GmbH&apos;, Einzel_Unit_Price__c,
					&apos;Herweck AG&apos;, Einzelpreis_Unit_Price__c,
					&apos;Schuss AV-Projektionssysteme GmbH&apos;,  Selling_price_Unit_Price__c,
					&apos;Tarox AG&apos;,  HEK_Formula__c, 
                                        &apos;prodyTel Distribution GmbH&apos;,  gerPOS_PreisVK_Unit_Price__c,   
					null)
*/</formula>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>