force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Verkaufsdatum_Date__c.field-meta.xml
<CustomField>
    <fullName>Verkaufsdatum_Date__c</fullName>
    <label>Verkaufsdatum</label>
    <type>Date</type>
</CustomField>