force-app/main/default/objects/Sell_Through_Report_Import__c/fields/VS_Part_number_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>VS_Part_number_Product_Code__c</fullName>
    <label>VS Part number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>