force-app/main/default/objects/Sell_Through_Report_Import__c/validationRules/STTRI01_Record_Synced_to_TCRM_cant_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>STTRI01_Record_Synced_to_TCRM_cant_edit</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Synced_to_TCRM__c,NOT(ISCHANGED(Synced_to_TCRM__c)))</errorConditionFormula>
    <errorMessage>STRI01-Record Synced to TCRM can&apos;t edit</errorMessage>
</ValidationRule>