force-app/main/default/objects/Sell_Through_Report_Import__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VS_SubRegion__c</columns>
    <columns>VS_Region__c</columns>
    <columns>distributor__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Import_File__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>