force-app/main/default/objects/Sell_Through_Report_Import__c/listViews/Allen.listView-meta.xml
<ListView>
    <fullName>Allen</fullName>
    <columns>NAME</columns>
    <columns>CsvUploaderFileIdentifier__c</columns>
    <columns>distributor__c</columns>
    <columns>VS_Region__c</columns>
    <columns>VS_SubRegion__c</columns>
    <columns>Ready_to_Sync_to_TCRM__c</columns>
    <columns>Synced_to_TCRM__c</columns>
    <columns>Customer_External_Customer_Id__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Allen Li</value>
    </filters>
    <filters>
        <field>VS_Region__c</field>
        <operation>equals</operation>
        <value>VSI</value>
    </filters>
    <label>Allen</label>
    <language>en_US</language>
</ListView>