force-app/main/default/objects/Sell_Through_Report_Import__c/listViews/Also.listView-meta.xml
<ListView>
    <fullName>Also</fullName>
    <columns>NAME</columns>
    <columns>distributor__c</columns>
    <columns>distributor_id__c</columns>
    <columns>City_City_Name__c</columns>
    <columns>fdate_Date__c</columns>
    <columns>Synced_to_TCRM__c</columns>
    <columns>Import_File__c</columns>
    <columns>Ready_to_Sync_to_TCRM__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>External_Company_Request__c</columns>
    <columns>External_Customer_Id_Formula__c</columns>
    <columns>VS_Region__c</columns>
    <columns>VS_SubRegion__c</columns>
    <columns>Date_Formula__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Synced_to_TCRM__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>distributor__c</field>
        <operation>equals</operation>
        <value>ALSO Deutschland GmbH</value>
    </filters>
    <label>Also_New Import</label>
    <sharedTo>
        <group>VSE_Germany_CMS_Admin</group>
    </sharedTo>
</ListView>