force-app/main/default/objects/Sell_Through_Report_Import__c/listViews/Delo_Synced_to_TCRM.listView-meta.xml
<ListView>
    <fullName>Delo_Synced_to_TCRM</fullName>
    <columns>NAME</columns>
    <columns>KD_Nr_External_Customer_Id__c</columns>
    <columns>Firma_Customer_Name__c</columns>
    <columns>Modell_Product_Code__c</columns>
    <columns>Menge_Quantity__c</columns>
    <columns>Datum_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>distributor__c</field>
        <operation>equals</operation>
        <value>Delo Computer GmbH</value>
    </filters>
    <filters>
        <field>Synced_to_TCRM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Delo_Synced to TCRM</label>
</ListView>