force-app/main/default/objects/Sell_Through_Report_Import__c/listViews/Ingram_Syned_To_TCRM.listView-meta.xml
<ListView>
    <fullName>Ingram_Syned_To_TCRM</fullName>
    <columns>NAME</columns>
    <columns>distributor__c</columns>
    <columns>distributor_id__c</columns>
    <columns>City_City_Name__c</columns>
    <columns>fdate_Date__c</columns>
    <columns>Synced_to_TCRM__c</columns>
    <columns>Import_File__c</columns>
    <columns>Ready_to_Sync_to_TCRM__c</columns>
    <columns>External_Customer_Id_Formula__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Synced_to_TCRM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>distributor__c</field>
        <operation>equals</operation>
        <value>Ingram Micro Distribution GmbH</value>
    </filters>
    <label>Ingram_Synced To TCRM</label>
    <sharedTo>
        <group>VSE_Germany_CMS_Admin</group>
    </sharedTo>
</ListView>